Modelo y vista básica

--- a/prompt-manager/src/main/resources/application.properties
+++ b/prompt-manager/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=prompt-manager
 server.port=8080
 spring.thymeleaf.cache=false
 
-# H2 file-based (base en el HOME: ~/pmdb)
+# H2 file-based
 spring.datasource.url=jdbc:h2:file:./data/pmdb;MODE=PostgreSQL
 spring.datasource.username=sa
 spring.datasource.password=
