--- a/prompt-manager/.gitignore
+++ b/prompt-manager/.gitignore
@@ -4,6 +4,11 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+/data/*.mv.db
+/data/*.trace.db
+/data/*.lock.db
+/data/*.h2.db
+
 ### STS ###
 .apt_generated
 .classpath
